[project]
name = "clinical-triage-env"
version = "0.1.0"
description = "OpenEnv Clinical Triage Environment"
requires-python = ">=3.10"
dependencies = [
"fastapi",
"uvicorn",
"pydantic",
"openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server", "graders", "data"]
